--- a/app/globals.css
+++ b/app/globals.css
@@ -21,6 +21,20 @@ body {
 
 }
 
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0px 1000px #EDEDED inset !important;
+  box-shadow: 0 0 0px 1000px #EDEDED inset !important;
+  background-color: transparent !important;
+  color: inherit !important;
+}
+
+
+
+
 .react-datepicker-wrapper {
   display: flex !important;
 }
